Fix: improved readability

--- a/src/App.css
+++ b/src/App.css
@@ -26,14 +26,17 @@ p {
 
 h1{
   font-size:2rem;
+  line-height: 2.5rem;
+  margin: 0;
 }
 h2{
   font-size: 1.8rem;
+  line-height: 2.7rem;
 }
 h3{
   font-size: 1.4rem;
   margin: 4px 0;
-  line-height: 2rem;
+  line-height: 2.1rem;
 }
 h5{
   font-size: 1.1rem;
@@ -73,6 +76,7 @@ li {
 
 p {
   white-space: pre-wrap;
+  line-height: 1.5rem;
 }
 
 .categoryHeading {
@@ -122,7 +126,7 @@ p {
   min-width: 330px;
   max-width: 400px;
   min-height: 155px;
-  max-height: 170px;
+  max-height: 225px;
   display: grid;
   border-radius: 8px;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.18);
@@ -130,6 +134,7 @@ p {
   grid-template-rows: auto 1fr 1fr auto;
   grid-template-areas:
     "profileIMG"
+    "profileName"
     "mail"
     "location"
     "tags";
@@ -137,6 +142,11 @@ p {
   background: white;
   margin-top: -90px;
   color: #707070;
+}
+
+#profileName {
+  grid-area: profileName;
+  margin: 1px auto;
 }
 
 #profileIMG {
@@ -424,6 +434,7 @@ li .technologyItem {
 
 .detailName {
   grid-area: detailName;
+  padding: 15px 0;
 }
 
 .subDetailName {
